Hovers, Definitions, Multiline Arguments, Debugger updates and updated semantic tokens
- Added hovers to the language server. Currently only usable for command functions (shows the documentation)
- Added "Go to definition" to the language server. This is supported on all sorts of arguments referencing datapack resources.
- DirectiveStringReader now always has a cursor mapper global for each file. Mapping the cursor now makes use of binary search
- Multiline JSON Text, NBT and Selectors
- Continued work on debugger